# models/tv.go
@@ -683,6 +683,88 @@ func (tvModel *TVModel) GetTVSeriesByActor(data requests.IDPagination) ([]respon
 	return tvList, paginatedData.Pagination, nil
 }
 
+func (tvModel *TVModel) GetPopularStreamingServices(region string) ([]responses.StreamingPlatform, error) {
+	match := bson.M{"$match": bson.M{
+		"streaming.country_code": region,
+	}}
+
+	project := bson.M{"$project": bson.M{
+		"_id": 1,
+		"streaming": bson.M{
+			"$slice": bson.A{
+				bson.M{
+					"$filter": bson.M{
+						"input": "$streaming",
+						"cond": bson.M{
+							"$eq": bson.A{
+								"$$this.country_code", region,
+							},
+						},
+					},
+				},
+				1,
+			},
+		},
+	}}
+
+	unwind := bson.M{"$unwind": bson.M{
+		"path":                       "$streaming",
+		"includeArrayIndex":          "index",
+		"preserveNullAndEmptyArrays": false,
+	}}
+
+	set := bson.M{"$set": bson.M{
+		"streaming": "$streaming.streaming_platforms",
+	}}
+
+	unwindAgain := bson.M{"$unwind": bson.M{
+		"path":                       "$streaming",
+		"includeArrayIndex":          "index",
+		"preserveNullAndEmptyArrays": false,
+	}}
+
+	group := bson.M{"$group": bson.M{
+		"_id": "$streaming.name",
+		"name": bson.M{
+			"$first": "$streaming.name",
+		},
+		"logo": bson.M{
+			"$first": "$streaming.logo",
+		},
+		"count": bson.M{
+			"$sum": 1,
+		},
+	}}
+
+	sort := bson.M{"$sort": bson.M{
+		"count": -1,
+	}}
+
+	limit := bson.M{"$limit": popularPlatformsLimit}
+
+	cursor, err := tvModel.Collection.Aggregate(context.TODO(), bson.A{
+		match, project, unwind, set, unwindAgain, group, sort, limit,
+	})
+	if err != nil {
+		logrus.WithFields(logrus.Fields{
+			"region": region,
+		}).Error("failed to aggregate platforms: ", err)
+
+		return nil, fmt.Errorf("Failed to get top platforms.")
+	}
+
+	var streamingPlatforms []responses.StreamingPlatform
+	if err := cursor.All(context.TODO(), &streamingPlatforms); err != nil {
+		logrus.WithFields(logrus.Fields{
+			"region": region,
+		}).Error("failed to decode platforms: ", err)
+
+		return nil, fmt.Errorf("Failed to decode top platforms.")
+	}
+
+	return streamingPlatforms, nil
+}
+
 func (tvModel *TVModel) SearchTVSeriesByTitle(data requests.Search) ([]responses.TVSeries, p.PaginationData, error) {
 	search := bson.M{"$search": bson.M{
 		"index": "tv_series_search",
