# routes/anime.go
@@ -18,6 +18,8 @@ func animeRouter(router *gin.RouterGroup, mongoDB *db.MongoDB) {
 		anime.GET("/airing", animeController.GetCurrentlyAiringAnimesByDayOfWeek)
 		anime.GET("", animeController.GetAnimesBySortAndFilter)
 		anime.GET("/popular", animeController.GetPopularAnimes)
+		anime.GET("/popular-streaming-services", animeController.GetPopularStreamingServices)
+		anime.GET("/popular-studios", animeController.GetPopularStudios)
 		anime.Use(helpers.OptionalTokenCheck).GET("/details", animeController.GetAnimeDetails)
 		anime.GET("/search", animeController.SearchAnimeByTitle)
 	}
